--- a/index.html
+++ b/index.html
@@ -44,6 +44,76 @@
 </tr>
 
 
+
+
+					<!-- Buttons -->
+					<table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center">
+  <tr>
+
+    <!-- BED & BATH -->
+    <td align="center" style="padding: 5px;">
+      <a href="#" 
+         style="font-family: Arial, sans-serif;
+                font-size:16px;
+                color:#2f3c8f;
+                text-decoration:none;
+                border:2px solid #2f3c8f;
+                padding:10px 18px;
+                display:inline-block;
+                font-weight:bold;">
+        BED & BATH
+      </a>
+    </td>
+
+    <!-- KITCHEN -->
+    <td align="center" style="padding: 5px;">
+      <a href="#" 
+         style="font-family: Arial, sans-serif;
+                font-size:16px;
+                color:#2f3c8f;
+                text-decoration:none;
+                border:2px solid #2f3c8f;
+                padding:10px 18px;
+                display:inline-block;
+                font-weight:bold;">
+        KITCHEN
+      </a>
+    </td>
+
+    <!-- ELECTRICAL -->
+    <td align="center" style="padding: 5px;">
+      <a href="#" 
+         style="font-family: Arial, sans-serif;
+                font-size:16px;
+                color:#2f3c8f;
+                text-decoration:none;
+                border:2px solid #2f3c8f;
+                padding:10px 18px;
+                display:inline-block;
+                font-weight:bold;">
+        ELECTRICAL
+      </a>
+    </td>
+
+    <!-- OUTDOOR -->
+    <td align="center" style="padding: 5px;">
+      <a href="#" 
+         style="font-family: Arial, sans-serif;
+                font-size:16px;
+                color:#2f3c8f;
+                text-decoration:none;
+                border:2px solid #2f3c8f;
+                padding:10px 18px;
+                display:inline-block;
+                font-weight:bold;">
+        OUTDOOR
+      </a>
+    </td>
+
+  </tr>
+</table>
+<!-- button coding finish here -->
+
 					
 
 					
@@ -478,6 +548,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
