--- a/index.html
+++ b/index.html
@@ -47,14 +47,11 @@
 
 
 					<!-- Buttons -->
-					<table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center">
   <tr>
 
     <!-- BED & BATH -->
     <td align="center" style="padding: 5px;">
-      <a href="#" 
-         style="font-family: Arial, sans-serif;
-                font-size:16px;
+      <a href="#" style="font-family: Arial, sans-serif; font-size:16px;
                 color:#2f3c8f;
                 text-decoration:none;
                 border:2px solid #2f3c8f;
@@ -111,7 +108,6 @@
     </td>
 
   </tr>
-</table>
 <!-- button coding finish here -->
 
 					
@@ -548,6 +544,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
