--- a/index.html
+++ b/index.html
@@ -46,68 +46,58 @@
 
 
 
-					<!-- Buttons -->
-  <tr>
+					<!-- Button coding start here -->
+					<tr>
 
-    <!-- BED & BATH -->
-    <td align="center" style="padding: 5px;">
-      <a href="#" style="font-family: Arial, sans-serif; font-size:16px;
-                color:#2f3c8f;
-                text-decoration:none;
-                border:2px solid #2f3c8f;
-                padding:10px 18px;
-                display:inline-block;
-                font-weight:bold;">
-        BED & BATH
-      </a>
-    </td>
+  <td class="nav-btn" width="25%" align="center" 
+      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+    <a href="#" style="font-family:Arial, sans-serif;
+                       font-size:16px;
+                       color:#2f3c8f;
+                       text-decoration:none;
+                       font-weight:bold;
+                       display:block;">
+      BED & BATH
+    </a>
+  </td>
 
-    <!-- KITCHEN -->
-    <td align="center" style="padding: 5px;">
-      <a href="#" 
-         style="font-family: Arial, sans-serif;
-                font-size:16px;
-                color:#2f3c8f;
-                text-decoration:none;
-                border:2px solid #2f3c8f;
-                padding:10px 18px;
-                display:inline-block;
-                font-weight:bold;">
-        KITCHEN
-      </a>
-    </td>
+  <td class="nav-btn" width="25%" align="center" 
+      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+    <a href="#" style="font-family:Arial, sans-serif;
+                       font-size:16px;
+                       color:#2f3c8f;
+                       text-decoration:none;
+                       font-weight:bold;
+                       display:block;">
+      KITCHEN
+    </a>
+  </td>
 
-    <!-- ELECTRICAL -->
-    <td align="center" style="padding: 5px;">
-      <a href="#" 
-         style="font-family: Arial, sans-serif;
-                font-size:16px;
-                color:#2f3c8f;
-                text-decoration:none;
-                border:2px solid #2f3c8f;
-                padding:10px 18px;
-                display:inline-block;
-                font-weight:bold;">
-        ELECTRICAL
-      </a>
-    </td>
+  <td class="nav-btn" width="25%" align="center" 
+      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+    <a href="#" style="font-family:Arial, sans-serif;
+                       font-size:16px;
+                       color:#2f3c8f;
+                       text-decoration:none;
+                       font-weight:bold;
+                       display:block;">
+      ELECTRICAL
+    </a>
+  </td>
 
-    <!-- OUTDOOR -->
-    <td align="center" style="padding: 5px;">
-      <a href="#" 
-         style="font-family: Arial, sans-serif;
-                font-size:16px;
-                color:#2f3c8f;
-                text-decoration:none;
-                border:2px solid #2f3c8f;
-                padding:10px 18px;
-                display:inline-block;
-                font-weight:bold;">
-        OUTDOOR
-      </a>
-    </td>
+  <td class="nav-btn" width="25%" align="center" 
+      style="padding:12px 5px;">
+    <a href="#" style="font-family:Arial, sans-serif;
+                       font-size:16px;
+                       color:#2f3c8f;
+                       text-decoration:none;
+                       font-weight:bold;
+                       display:block;">
+      OUTDOOR
+    </a>
+  </td>
 
-  </tr>
+</tr>
 <!-- button coding finish here -->
 
 					
@@ -544,6 +534,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
