--- a/index.html
+++ b/index.html
@@ -47,57 +47,39 @@
 
 
 					<!-- Button coding start here -->
-					<tr>
 
-  <td class="nav-btn" width="25%" align="center" 
-      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
-    <a href="#" style="font-family:Arial, sans-serif;
-                       font-size:16px;
-                       color:#2f3c8f;
-                       text-decoration:none;
-                       font-weight:bold;
-                       display:block;">
-      BED & BATH
-    </a>
-  </td>
+<table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
+  <tr>
 
-  <td class="nav-btn" width="25%" align="center" 
-      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
-    <a href="#" style="font-family:Arial, sans-serif;
-                       font-size:16px;
-                       color:#2f3c8f;
-                       text-decoration:none;
-                       font-weight:bold;
-                       display:block;">
-      KITCHEN
-    </a>
-  </td>
+    <td width="25%" align="center" style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;">
+        BED & BATH
+      </a>
+    </td>
 
-  <td class="nav-btn" width="25%" align="center" 
-      style="padding:12px 5px; border-right:1px solid #dcdcdc;">
-    <a href="#" style="font-family:Arial, sans-serif;
-                       font-size:16px;
-                       color:#2f3c8f;
-                       text-decoration:none;
-                       font-weight:bold;
-                       display:block;">
-      ELECTRICAL
-    </a>
-  </td>
+    <td width="25%" align="center" style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;">
+        KITCHEN
+      </a>
+    </td>
 
-  <td class="nav-btn" width="25%" align="center" 
-      style="padding:12px 5px;">
-    <a href="#" style="font-family:Arial, sans-serif;
-                       font-size:16px;
-                       color:#2f3c8f;
-                       text-decoration:none;
-                       font-weight:bold;
-                       display:block;">
-      OUTDOOR
-    </a>
-  </td>
+    <td width="25%" align="center" style="padding:12px 5px; border-right:1px solid #dcdcdc;">
+      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;">
+        ELECTRICAL
+      </a>
+    </td>
 
-</tr>
+    <td width="25%" align="center" style="padding:12px 5px;">
+      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;">
+        OUTDOOR
+      </a>
+    </td>
+
+  </tr>
+</table>
+
+
+
 <!-- button coding finish here -->
 
 					
@@ -534,6 +516,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
