--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         </xml>
     </noscript>
     <![endif]-->
+
+		<style>
+@media only screen and (max-width:600px) {
+  .nav-btn {
+    display:block !important;
+    width:100% !important;
+    border-right:none !important;
+    border-bottom:1px solid #dcdcdc !important;
+  }
+}
+</style>
 </head>
 <body style="margin: 0; padding: 0; background-color: #f8f8f8; font-family: Arial, sans-serif;">
     
@@ -517,6 +528,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
