--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <td align="center" style="padding:0;">
 
     <a href="" target="_blank" style="text-decoration:none;">
-      <img src="https://your-image-link.jpg" width="600" alt="Sale Banner" border="0" style="display:block; width:100%; max-width:600px; height:auto; border:0; line-height:0; font-size:0;">
+      <img src="https://raw.githubusercontent.com/deolr359/marketing-2/refs/heads/main/Massive%20Dollars%20in%20Savings.png" width="600" alt="Sale Banner" border="0" style="display:block; width:100%; max-width:600px; height:auto; border:0; line-height:0; font-size:0;">
     </a>
   </td>
 </tr>
@@ -538,6 +538,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
