--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </a>
   </td>
 </tr>
-<-- Banner img finishes here -->
+<!-- Banner img finishes here -->
 					
 					
                     <tr>
@@ -538,6 +538,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
