--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                             <!-- Section Title -->
                             <div style="text-align: center; margin-bottom: 40px;">
                                 <h3 style="margin: 0 0 15px 0; color: #333333; font-size: 28px; font-weight: bold;">
-                                    <img src="https://raw.githubusercontent.com/deolr359/Email-marketing1/refs/heads/main/white%20fire.png" alt="🔥" width="25" height="25" style="vertical-align:middle;"> Hot Deals This Week
-								
+                                     Hot Deals This Week
 								</h3>
                                 <p style="margin: 0; color: #777777; font-size: 16px;">
                                     Handpicked items with amazing discounts - Limited stock available!
@@ -485,6 +484,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
