--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Summer Sale - Premium Collection</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <!--[if mso]>
     <noscript>
         <xml>
@@ -63,25 +64,25 @@
   <tr>
 
     <td width="25%" align="center" style="padding:12px 5px; ">
-      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
+      <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
         BED & BATH
       </a>
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px; ">
-      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
+      <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
         KITCHEN
       </a>
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px;">
-      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
+      <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
         ELECTRICAL
       </a>
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px;">
-      <a href="#" style="font-family:Arial; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
+      <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
         OUTDOOR
       </a>
     </td>
@@ -484,6 +485,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
