--- a/index.html
+++ b/index.html
@@ -133,6 +133,22 @@
                                 </p>
                                 <div style="width: 60px; height: 2px; background: #203589; margin: 20px auto 0 auto;"></div>
                             </div>
+
+
+							<!-- TV banner coding starts here --> 
+							<tr>
+  <td align="center" style="padding: 20px 0;">
+    <!-- Banner Image -->
+    <a href="https://yourwebsite.com" target="_blank">
+      <img 
+        src="https://raw.githubusercontent.com/deolr359/marketing-2/refs/heads/main/Samsung%20TVs.png" 
+        alt="Up to 20% Off on Samsung TVs" 
+        width="600" 
+        style="display: block; width: 100%; max-width: 600px; height: auto; border: 0; outline: none; text-decoration: none;">
+    </a>
+  </td>
+</tr>
+							<!-- TV banner coding finishes here -->
                             
                             <!-- Product Grid -->
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -485,6 +501,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
