--- a/index.html
+++ b/index.html
@@ -330,9 +330,8 @@
                             </p>
                             <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin: 0 auto;">
                                 <tr>
-                                    <td style="background: #d14141; padding: 20px 40px; border-radius: 35px; box-shadow: 0 5px 15px rgba(255,107,107,0.4);">
+                                    <td style="background: #203589; padding: 20px 40px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
                                         <a href="#" style="color: #ffffff; text-decoration: none; font-size: 20px; font-weight: bold; display: block; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
-                                            <img src="https://raw.githubusercontent.com/deolr359/Email-marketing1/refs/heads/main/shopping1.png" alt="🛍️" width="30" height="30" style="vertical-align:middle;"> 
 											 SHOP NOW & SAVE BIG!
                                         </a>
                                     </td>
@@ -428,6 +427,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
