--- a/index.html
+++ b/index.html
@@ -65,25 +65,24 @@
 
     <td width="25%" align="center" style="padding:12px 5px; ">
       <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
-        BED & BATH
+        Computers
       </a>
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px; ">
       <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
-        KITCHEN
+        Entertainment
       </a>
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px;">
       <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
-        ELECTRICAL
-      </a>
+        Smarthome
     </td>
 
     <td width="25%" align="center" style="padding:12px 5px;">
       <a href="#" style="font-family: 'Montserrat', sans-serif; font-size:16px; color:#2f3c8f; text-decoration:none; font-weight:bold; display:block;" target="_blank">
-        OUTDOOR
+        Electrical
       </a>
     </td>
 
@@ -427,6 +426,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
