--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 											<!-- TV banner coding starts here --> 
 							<tr>
   <td align="center">
-    <a href="https://yourwebsite.com" target="_blank">
+    <a href="#" target="_blank">
       <img 
         src="https://raw.githubusercontent.com/deolr359/marketing-2/refs/heads/main/Samsung%20TVs.png" 
         alt="Up to 20% Off on Samsung TVs" 
@@ -424,6 +424,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
