--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                             <p style="margin: 0 0 20px 0; color: #ffffff; font-size: 16px; opacity: 0.9;">
                                 Join 50,000+ subscribers and never miss a deal!
                             </p>
-                            <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 15px; display: inline-block;">
+                            <div style="background: rgba(255,255,255,0.1); padding: 20px; display: inline-block;">
                                 <div style="margin-bottom: 15px;">
                                     <input type="email" placeholder="Enter your email address" style="padding: 12px 20px; border: none; border-radius: 25px; width: 250px; font-size: 14px; margin-right: 10px;">
                                     <button  href="#" style="background: #ffca08; color: white; border: none; padding: 12px 25px; font-weight: bold; font-size: 14px; cursor: pointer;">
@@ -424,6 +424,7 @@
                                 </p>
                                 <p style="margin: 0; color: #95a5a6; font-size: 11px;">
                                     <a href="#" style="color: #95a5a6; text-
+
 
 
 
